--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,15 @@
+
+
+
+
 <br>
-<br><div class="unslate_co--section" id="contact-section">
+<br>
+
+
+
+
+
+<div class="unslate_co--section" id="contact-section">
   <div class="container">
     <div class="section-heading-wrap text-center mb-5">
       <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Get In Touch</span></h2>
@@ -12,26 +22,28 @@
             <div class="col-lg-6 form-group gsap-reveal">
               <label for="name">Name</label>
               <br>
+
               <input formControlName="name" type="text" class="form-control" id="name" required>
             </div>
 
             <div class="col-lg-6 form-group gsap-reveal">
               <label for="phone">Phone</label>
               <br>
+
               <input formControlName="phone" type="text" class="form-control" id="phone" required>
             </div>
 
             <div class="col-lg-6 form-group gsap-reveal">
               <label for="email">Email</label>
               <br>
+
               <input formControlName="email" type="email" class="form-control" id="email" required>
             </div>
-
-          
 
             <div class="col-lg-12 form-group gsap-reveal">
               <label for="message">Write your message...</label>
               <br>
+
               <textarea formControlName="message" id="message" cols="30" rows="7" class="form-control" required></textarea>
             </div>
           </div>
@@ -61,7 +73,7 @@
           </div>
           <div class="gsap-reveal d-block">
             <span class="d-block contact-info-label">Address</span>
-            <address class="contact-info-val">Turky. <br> Istanpual</address>
+            <address class="contact-info-val">Turkey. <br> Istanbul</address>
           </div>
         </div>
       </div>
